# sovereign-transformer

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
datalog/: test_facts.dl  transformer.dl
persona/: DARPA_MALICE_0x00.json
rust/: datalog.rs  gate.rs  main.rs  plasma.rs
x86/: Makefile  plasma_gate.asm  plasma_gate.h  plasma_test.c
