[package]
name = "sovereign-transformer"
version = "0.1.0"
edition = "2021"
description = "Sovereign corpus gate daemon — plasma (x86 mirror) + Datalog (transformer.dl mirror)"

[[bin]]
name = "sovereign-transformer"
path = "rust/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
